refactor: List.of()를 사용하도록 수정